# telegram-archive-bot

./: .gitignore  README.md  config.ini.example  config.json.example  main.py  telegram_archive_bot.py
telegram_archive_bot/: .gitignore  archive.dockerfile  docker-compose.yml  telegram_archive_bot.py
telegram_bot_backend/: app.dockerfile  docker-compose.yml
telegram_bot_backend/app/: main.py  pyproject.toml
